--- a/src/static/global.css
+++ b/src/static/global.css
@@ -174,6 +174,14 @@ input[type='checkbox'] {
   }
 }
 
+/* Charts */
+
+.chart-bg {
+  background: hsl(from var(--color-tertiary) h s calc(l - 10));
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+
 .outer-scroll::-webkit-scrollbar {
   display: none;
 }
